--- a/FloatingActionButton/src/main/res/layout/activity_dialer.xml
+++ b/FloatingActionButton/src/main/res/layout/activity_dialer.xml
@@ -3,6 +3,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context="com.example.myapplication.DialerActivity">
+    <View
+        android:layout_height="20dp"
+        android:layout_width="match_parent"
+        android:background="@color/colorPrimaryDark"
+        />
+
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabLayout"
+        app:tabGravity="center"
+        app:tabMode="fixed"
+        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimaryDark" />
 
 </LinearLayout>
