--- a/FloatingActionButton/src/main/res/layout/alert_login.xml
+++ b/FloatingActionButton/src/main/res/layout/alert_login.xml
@@ -21,53 +21,67 @@
         android:orientation="vertical"
         android:gravity="center">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/userName_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
-
-        <com.example.myapplication.view.ClearEditText
-            android:id="@+id/userName"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/userName_til"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Username"
-            android:maxLines="1"
-            android:inputType="text"
-            android:imeOptions="actionNext"
-            android:drawableRight="@drawable/ic_action_location_found_dark"
-            />
-    </android.support.design.widget.TextInputLayout>
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/password_til"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp">
+            <com.example.myapplication.view.ClearEditText
+                android:id="@+id/userName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Username"
+                android:maxLines="1"
+                android:inputType="text"
+                android:imeOptions="actionNext"
+                android:drawableRight="@drawable/ic_action_location_found_dark" />
+        </android.support.design.widget.TextInputLayout>
 
-        <com.example.myapplication.view.ClearEditText
-            android:id="@+id/password"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/password_til"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Password"
-            android:maxLines="1"
-            android:inputType="textPassword"
-            android:imeOptions="actionDone"
-            android:imeActionId="123"
-            android:imeActionLabel="无效"/>
-    </android.support.design.widget.TextInputLayout>
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp">
 
-    <Button
-        android:layout_marginTop="20dp"
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="登陆"
-        android:textColor="#ffffff"
-        android:background="@drawable/shape"
-        />
+            <com.example.myapplication.view.ClearEditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Password"
+                android:maxLines="1"
+                android:inputType="textPassword"
+                android:imeOptions="actionDone"
+                android:imeActionId="123"
+                android:imeActionLabel="无效" />
+        </android.support.design.widget.TextInputLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="right"
+            android:paddingRight="20dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="记住密码" />
+
+            <CheckBox
+                android:id="@+id/checkbox"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/login_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="登陆"
+            android:textColor="#ffffff"
+            android:background="@drawable/shape" />
     </LinearLayout>
 
 </LinearLayout>
