--- a/FloatingActionButton/src/main/res/layout/activity_my_broad_cast.xml
+++ b/FloatingActionButton/src/main/res/layout/activity_my_broad_cast.xml
@@ -28,14 +28,24 @@
             android:id="@+id/start_service_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="启动service"
+            android:text="开始录音"
             />
         <Button
             android:id="@+id/stop_service_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="停止service"
+            android:text="结束录音"
             />
+        <Button
+            android:id="@+id/play_service_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="播放录音"/>
+        <Button
+            android:id="@+id/stop_play_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="停止播放"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,6 +83,25 @@
         android:layout_height="wrap_content"
         android:text="i"
         />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/hui"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="log日志:"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_weight="1">
+        <TextView
+            android:id="@+id/log_tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text=""/>
+    </ScrollView>
 
 
 </LinearLayout>
