--- a/FloatingActionButton/src/main/res/values-v21/dimens.xml
+++ b/FloatingActionButton/src/main/res/values-v21/dimens.xml
@@ -2,4 +2,12 @@
 <resources>
     <dimen name="fab_margin_right">16dp</dimen>
     <dimen name="fab_margin_bottom">16dp</dimen>
+    !-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="drop_pop_menu_text_size">16sp</dimen>
+    <dimen name="drop_pop_menu_item_height">35dp</dimen>
+    <dimen name="drop_pop_menu_item_horizontal_margin">10dp</dimen>
+    <dimen name="drop_pop_menu_icon_text_margin">10dp</dimen>
+    <dimen name="drop_pop_menu_icon_width">22dp</dimen>
 </resources>
