--- a/FloatingActionButton/src/main/res/layout/custom_pop.xml
+++ b/FloatingActionButton/src/main/res/layout/custom_pop.xml
@@ -8,7 +8,7 @@
         android:layout_width="120dp"
         android:layout_height="fill_parent"
         android:cacheColorHint="#00000000"
-        android:divider="#cdcdcd"
+        android:divider="#dedede"
         android:dividerHeight="1dp"
         android:padding="3dp"
         android:scrollingCache="false" />
